--- a/client/public/index.html
+++ b/client/public/index.html
@@ -51,17 +51,13 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Lumina - David Nguyen's AI Assistant</title>
     <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-RZBP95EQ7L"
-    ></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-71FYKGRF2E"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-RZBP95EQ7L");
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-71FYKGRF2E');
     </script>
   </head>
   <body style="transition: background-color 0.3s ease">
